--- a/packages/ui/styles/a11y.scss
+++ b/packages/ui/styles/a11y.scss
@@ -1,8 +1,18 @@
 @import './constants/index.scss';
 
-@mixin outline {
+@mixin outlineFormField {
   border-color: $colorAccessibilityOutline;
   box-shadow: inset 0 0 0 $outlineWidth $colorAccessibilityOutline;
+
+  // Do not remove outline for high-contrast modes
+  // https://stackoverflow.com/a/52616313
+  outline-color: transparent;
+  outline-width: $outlineWidth;
+}
+
+@mixin outlineButton {
+  border-color: $colorAccessibilityOutline;
+  box-shadow: 0 0 0 $outlineWidth $colorAccessibilityOutline;
 
   // Do not remove outline for high-contrast modes
   // https://stackoverflow.com/a/52616313
