--- a/packages/ui/styles/constants/sizes.scss
+++ b/packages/ui/styles/constants/sizes.scss
@@ -23,6 +23,8 @@ $iconSize: $grid * 4;
 
 $tooltipMaxWidth: 550px;
 
+$buttonMaxWidth: 300px;
+
 // TODO: Automate
 :export {
   screenMinWidth: $screenMinWidth;
