--- a/packages/ui/styles/constants/sizes.scss
+++ b/packages/ui/styles/constants/sizes.scss
@@ -12,7 +12,8 @@ $borderRadius: $grid * 1.25;
 // It does not make sense to express separator width in REMs since we do not need it to scale with the base font size
 $separatorWidth: 1px;
 
-$inputBorderWidth: 1px;
+$borderWidth: 1px;
+$borderWidthButton: 2px;
 
 $outlineWidth: 2px;
 
@@ -22,13 +23,15 @@ $iconSize: $grid * 4;
 
 $tooltipMaxWidth: 550px;
 
+$buttonMaxWidth: 300px;
+
 // TODO: Automate
 :export {
   screenMinWidth: $screenMinWidth;
   grid: $grid;
   borderRadius: $borderRadius;
   separatorWidth: $separatorWidth;
-  inputBorderWidth: $inputBorderWidth;
+  borderWidth: $borderWidth;
   outlineWidth: $outlineWidth;
   iconStrokeWidth: $iconStrokeWidth;
   iconSize: $iconSize;
