--- a/packages/ui/styles/constants/sizes.scss
+++ b/packages/ui/styles/constants/sizes.scss
@@ -8,6 +8,7 @@ $screenMinWidth: 1280px;
 $grid: 0.25rem;
 
 $borderRadius: $grid * 1.25;
+$borderRadiusAlert: 37px;
 
 // It does not make sense to express separator width in REMs since we do not need it to scale with the base font size
 $separatorWidth: 1px;
