--- a/packages/ui/styles/constants/colors.scss
+++ b/packages/ui/styles/constants/colors.scss
@@ -18,7 +18,7 @@ $colorInfoDark: #4a71c4;
 
 $colorWarningLight: #f9b721;
 $colorWarning: #f47027;
-$colorWarningDark: #c67000;
+$colorWarningDark: #ad6200;
 
 $colorError: #b00020;
 
