--- a/packages/ui/src/IconButton.module.scss
+++ b/packages/ui/src/IconButton.module.scss
@@ -6,17 +6,20 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
   cursor: pointer;
   border: none;
   position: relative;
   background-color: transparent;
-  color: $colorBlack;
+  margin: 0;
+  padding: 0;
 
   .outline {
+    z-index: $zIndex1;
     position: absolute;
-    border-radius: $borderRadius;
     pointer-events: none;
+    width: 100%;
+    height: 100%;
+    border-radius: $borderRadius;
   }
 
   &:focus,
@@ -27,11 +30,6 @@
     outline-width: $outlineWidth;
 
     .outline {
-      /* doiuse-disable calc */
-      width: calc(100% + #{$grid});
-      height: calc(100% + #{$grid});
-      /* doiuse-enable calc */
-      z-index: $zIndex1;
       box-shadow: 0 0 0 $outlineWidth $colorAccessibilityOutline;
     }
   }
