--- a/packages/ui/src/Toast.module.scss
+++ b/packages/ui/src/Toast.module.scss
@@ -5,7 +5,6 @@
   flex-direction: row;
   align-items: center;
   border-radius: $borderRadiusToast;
-  color: $colorNeutralWhite;
   font-size: $fontSizeBodyNormal;
   letter-spacing: $letterSpacingBodyNormal;
   line-height: $lineHeightBodyNormal;
@@ -19,27 +18,7 @@
   }
 
   .close {
-    width: $grid * 6;
-    height: $grid * 6;
     margin-left: $grid * 2.5;
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-
-    &:focus {
-      // Do not remove outline for high-contrast modes
-      // https://stackoverflow.com/a/52616313
-      outline-color: transparent;
-      outline-width: $outlineWidth;
-      box-shadow: 0 0 0 $outlineWidth $colorAccessibilityOutline;
-    }
-
-    .closeIcon {
-      width: 100%;
-      height: 100%;
-      color: $colorBlack;
-    }
   }
 
   &.success {
@@ -80,6 +59,10 @@
 
   &.critical {
     background-color: $colorError;
+
+    .icon {
+      color: $colorNeutralWhite;
+    }
 
     .content {
       color: $colorNeutralWhite;
