--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -31,8 +31,7 @@
   &.focus {
     // Do not remove outline for high-contrast modes
     // https://stackoverflow.com/a/52616313
-    outline-color: transparent;
-    outline-width: $outlineWidth;
+    outline: $outlineWidth solid transparent;
 
     .outline {
       /* doiuse-disable calc */
