--- a/packages/ui/src/IconButton.module.scss
+++ b/packages/ui/src/IconButton.module.scss
@@ -20,14 +20,14 @@
     width: 100%;
     height: 100%;
     border-radius: $borderRadius;
+    border-color: $colorAccessibilityOutline;
   }
 
   &:focus,
   &.focus {
     // Do not remove outline for high-contrast modes
     // https://stackoverflow.com/a/52616313
-    outline-color: transparent;
-    outline-width: $outlineWidth;
+    outline: $outlineWidth solid transparent;
 
     .outline {
       box-shadow: 0 0 0 $outlineWidth $colorAccessibilityOutline;
