--- a/packages/ui/styles/constants/sizes.scss
+++ b/packages/ui/styles/constants/sizes.scss
@@ -23,7 +23,8 @@ $iconSize: $grid * 4;
 
 $tooltipMaxWidth: 550px;
 
-$checkboxSize: 20px;
+$buttonMaxWidth: 300px;
+$checkboxSize: 16px;
 
 // TODO: Automate
 :export {
