--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -1,4 +1,6 @@
 // https://zeroheight.com/11d0e6dac/p/594529--colors
+$colorBlack: #000 !default;
+
 $colorPrimaryLight: #2d7de4 !default;
 $colorPrimary: #2160c0 !default;
 $colorPrimaryDark: #003b87 !default;
