--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -19,7 +19,8 @@ $outlineWidth: 2px !default;
 
 $iconStrokeWidth: 2px !default;
 
-$iconSize: $grid * 4 !default;
+$iconSizeSmall: $grid * 4 !default;
+$iconSizeNormal: $grid * 6 !default;
 
 $tooltipMaxWidth: 550px !default;
 
