--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -10,6 +10,23 @@ $borderSize: 1px;
   cursor: pointer;
   @include c.typographyBodySmall;
 
+  // default visible checkmark
+  .checkmark {
+    width: c.$iconSize;
+    height: c.$iconSize;
+    border: 1px solid c.$colorNeutralLight;
+    border-radius: 25%;
+    color: c.$colorNeutralWhite;
+    // because of ~ and + selectors used below, we need to keep the current order in DOM and
+    // fix it visually with order property
+    order: -1;
+  }
+
+  // Error state
+  .error > .checkmark {
+    border-color: c.$colorError;
+  }
+
   // Outline on focus
   input:focus ~ .checkmark {
     box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
@@ -17,43 +34,32 @@ $borderSize: 1px;
     outline-color: transparent;
     outline-width: c.$outlineWidth;
   }
+
+  // hide native checkbox
+  input {
+    height: 0;
+    width: 0;
+    opacity: 0;
+    position: absolute;
+  }
+
+  input:checked ~ .checkmark {
+    background-color: c.$colorSuccessLight;
+    border-color: c.$colorSuccessLight;
+  }
+
+  input:indeterminate ~ .checkmark {
+    background-color: c.$colorPrimaryLight;
+    border: 1px solid transparent;
+  }
+
+  .name {
+    padding-left: c.$grid * 1.25;
+  }
 }
 
 .wrapper:not(.checked) {
   color: c.$colorTextSecondary;
-}
-
-// hide native checkbox
-.wrapper > input {
-  height: 0;
-  width: 0;
-  opacity: 0;
-  position: absolute;
-}
-
-// default visible checkmark
-.checkmark {
-  width: c.$iconSize;
-  height: c.$iconSize;
-  border: 1px solid c.$colorNeutralLight;
-  border-radius: 25%;
-  color: c.$colorNeutralWhite;
-  // because of ~ and + selectors used below, we need to keep the current order in DOM and
-  // fix it visually with order property
-  order: -1;
-}
-
-.name {
-  padding-left: c.$grid * 1.25;
-}
-
-.wrapper > input:checked ~ .checkmark {
-  background-color: c.$colorSuccessLight;
-  border-color: c.$colorSuccessLight;
-}
-.wrapper > input:indeterminate ~ .checkmark {
-  background-color: c.$colorPrimaryLight;
-  border: 1px solid transparent;
 }
 
 /**
@@ -68,11 +74,4 @@ label.wrapper.disabled > input:indeterminate ~ .checkmark {
   background-color: c.$colorNeutral;
   color: c.$colorNeutralWhite;
   border-color: c.$colorNeutralLight;
-}
-
-/**
-Error state
- */
-.error .checkmark {
-  border-color: c.$colorError;
 }
