test: update screenshots

--- a/packages/ui/src/Toast.module.scss
+++ b/packages/ui/src/Toast.module.scss
@@ -15,13 +15,19 @@
 
   .close {
     margin-left: c.$grid * 2.5;
+
+    &:hover,
+    &.hover {
+      background-color: transparent;
+      box-shadow: none;
+    }
   }
 
   &.success {
     background-color: c.$colorSuccess;
     color: c.$colorNeutralWhite;
 
-    .icon {
+    .closeIcon {
       color: c.$colorNeutralWhite;
     }
   }
@@ -33,6 +39,10 @@
     .icon {
       color: c.$colorInfoDark;
     }
+
+    .closeIcon {
+      color: c.$colorText;
+    }
   }
 
   &.warning {
@@ -42,13 +52,17 @@
     .icon {
       color: c.$colorWarningDark;
     }
+
+    .closeIcon {
+      color: c.$colorText;
+    }
   }
 
   &.critical {
     background-color: c.$colorError;
     color: c.$colorNeutralWhite;
 
-    .icon {
+    .closeIcon {
       color: c.$colorNeutralWhite;
     }
   }
