--- a/packages/ui/src/IconButton.module.scss
+++ b/packages/ui/src/IconButton.module.scss
@@ -7,9 +7,14 @@
   border: none;
   position: relative;
   background-color: transparent;
+  border-radius: c.$borderRadius;
   color: inherit;
   margin: 0;
   padding: 0;
+
+  .icon {
+    color: c.$colorPrimary;
+  }
 
   .outline {
     z-index: c.$zIndex100;
@@ -19,6 +24,12 @@
     height: 100%;
     border-radius: c.$borderRadius;
     border-color: c.$colorAccessibilityOutline;
+  }
+
+  &:hover,
+  &.hover {
+    background-color: c.$colorNeutralLighter;
+    box-shadow: inset 0 0 0 c.$borderWidth c.$colorNeutralLight;
   }
 
   &:focus,
