--- a/packages/ui/styles/helpers/_a11y.scss
+++ b/packages/ui/styles/helpers/_a11y.scss
@@ -2,10 +2,10 @@
 
 @mixin outlineFormField {
   border-color: c.$colorAccessibilityOutline;
-  box-shadow: inset 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
+  // Border is also colored with the a11y color. We need to make the total visible outline width c.$outlineWidth, including the border
+  box-shadow: inset 0 0 0 (c.$outlineWidth - c.$borderWidth) c.$colorAccessibilityOutline;
 
   // Do not remove outline for high-contrast modes
   // https://stackoverflow.com/a/52616313
-  outline-color: transparent;
-  outline-width: c.$outlineWidth;
+  outline: transparent solid c.$outlineWidth;
 }
