feat(ui/toooltip): add Tooltip component

--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -22,6 +22,7 @@ $iconStrokeWidth: 2px !default;
 $iconSizeSmall: $grid * 4 !default;
 $iconSizeNormal: $grid * 6 !default;
 
+$tooltipArrowSize: 6px !default;
 $tooltipMaxWidth: 550px !default;
 
 $buttonMaxWidth: 300px !default;
