feat: add styles

--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -22,6 +22,8 @@ $iconStrokeWidth: 2px !default;
 $iconSizeSmall: $grid * 4 !default;
 $iconSizeNormal: $grid * 6 !default;
 
+$alertWidth: 350px !default;
+
 $tooltipMaxWidth: 550px !default;
 
 $buttonMaxWidth: 300px !default;
