--- a/packages/ui/src/Toast.module.scss
+++ b/packages/ui/src/Toast.module.scss
@@ -8,9 +8,12 @@
   max-width: c.$toastMaxWidth;
   padding: c.$grid * 1.5 c.$grid * 2.5;
 
+  .icon {
+    margin-right: c.$grid * 2.5;
+  }
+
   .content {
     word-break: break-all;
-    margin-left: c.$grid * 2.5;
   }
 
   .close {
