--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -6,6 +6,7 @@
   flex-direction: row;
   user-select: none;
   cursor: pointer;
+  font-weight: c.$fontWeightRegular;
   @include c.typographyBodySmall;
 
   // default visible checkmark
