Fix Help vertical centering

--- a/packages/ui/src/Help.module.scss
+++ b/packages/ui/src/Help.module.scss
@@ -1,13 +1,9 @@
 @use '../styles/constants' as c;
 
 .container {
-  display: inline-block;
+  display: inline-flex;
   vertical-align: middle;
   line-height: 1;
-
-  > svg {
-    vertical-align: middle;
-  }
 }
 
 .padding {
